--- a/ui.html
+++ b/ui.html
@@ -148,7 +148,28 @@
         }
 
         function handleSignup() {
-            alert("Firebase Config डालने के बाद यह असली अकाउंट बनाएगा। अभी यह सिर्फ़ UI डेमो है।");
+            alert(// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBmwtDM6mget0nZhkGA0D-cUhMrgMd4LQs",
+  authDomain: "deeh-e87bf.firebaseapp.com",
+  databaseURL: "https://deeh-e87bf-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "deeh-e87bf",
+  storageBucket: "deeh-e87bf.firebasestorage.app",
+  messagingSenderId: "618337488833",
+  appId: "1:618337488833:web:a0a9fdb3df462e6fc1a940",
+  measurementId: "G-232RT46WNQ"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app););
         }
     </script>
 </body>
