--- a/ui.html
+++ b/ui.html
@@ -172,5 +172,29 @@ const app = initializeApp(firebaseConfig);
 const analytics = getAnalytics(app););
         }
     </script>
+   <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBmwtDM6mget0nZhkGA0D-cUhMrgMd4LQs",
+    authDomain: "deeh-e87bf.firebaseapp.com",
+    databaseURL: "https://deeh-e87bf-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "deeh-e87bf",
+    storageBucket: "deeh-e87bf.firebasestorage.app",
+    messagingSenderId: "618337488833",
+    appId: "1:618337488833:web:66deb9cb7eb02229c1a940",
+    measurementId: "G-1CG0SSGKEZ"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script> 
 </body>
 </html>
